--- a/css/style.css
+++ b/css/style.css
@@ -768,6 +768,10 @@ a.header__menu-inner-link--active {
   background-color: #9FB3A8;
 }
 
+.form-group-style--padding {
+  padding: 9px 14px;
+}
+
 .form-group-style label {
   padding-right: 10px;
 }
@@ -836,6 +840,8 @@ a.header__menu-inner-link--active {
 }
 
 .sort_type {
+  width: 100%;
+
   color: white;
 
   background-color: transparent;
