--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
   margin: 0 auto;
   padding: 5px 27px;
 
-  font-family: 'Roboto', 'Arial', sans-serif;
+  font-family: "Roboto", "Arial", sans-serif;
   font-size: 16px;
   font-weight: 400;
   color: #323232;
@@ -12,15 +12,15 @@ body {
   background-color: #849D8F;
 }
 
-iframe {
+.map__interactive {
   border: 0;
   width: 1200px;
   height: 430px;
 }
 
 .visually-hidden:not(:focus):not(:active),
-input[type="checkbox"].visually-hidden,
-input[type="radio"].visually-hidden {
+.input__checkbox.visually-hidden,
+.input__radio.visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -83,9 +83,7 @@ input[type="radio"].visually-hidden {
 
 /* Выше перечислены все ul */
 
-input[type="text"],
-input[type="password"],
-input[type="email"] {
+.input {
   padding: 15px;
 
   font-size: 16px;
@@ -94,10 +92,13 @@ input[type="email"] {
   letter-spacing: normal;
   text-align: left;
   color: #323232;
+
+  border-radius: 5px;
+  border: 1px solid rgba(178, 178, 178, 0.52);
 }
 
-input::placeholder,
-textarea::placeholder {
+.input::placeholder,
+.textarea::placeholder {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
@@ -106,12 +107,16 @@ textarea::placeholder {
   color: #999999;
 }
 
-input:hover {
-  border: solid 2px rgba(154, 154, 154, 0.52);
+.input:hover,
+.textarea:hover {
+  box-shadow: 0 0 0 1px rgba(154, 154, 154, 0.52);
 }
 
-input:focus {
-  outline: solid 2px rgba(46, 136, 228, 0.52);
+.input:focus,
+.textarea:focus {
+  box-shadow: 0 0 0 1px rgba(46, 136, 228, 0.52);
+  outline: none;
+  border: 1px solid rgba(46, 136, 228, 0.52);
 }
 
 a {
@@ -137,6 +142,10 @@ a:hover {
 .header-nav {
   display: flex;
   justify-content: space-between;
+}
+
+.header__logo-item {
+  margin: 3px 0px;
 }
 
 .header__menu {
@@ -259,7 +268,7 @@ a.header__menu-inner-link--active {
 }
 
 .header__menu-link {
-  padding: 4px 13px;
+  padding: 4px 13px 4px 12px;
 
   border-radius: 20px;
 }
@@ -273,7 +282,7 @@ a.header__menu-inner-link--active {
 
 .header__user-buttons {
   display: flex;
-  padding: 10px;
+  padding: 5px 10px 9px 21px;
 
   font-size: 14px;
   font-weight: 500;
@@ -298,19 +307,33 @@ a.header__menu-inner-link--active {
   background-color: #f8f7f4;
 }
 
-.header__user-buttons-find:hover .header__find-link img,
-.header__user-buttons-enter:hover .header__enter-link img,
-.header__user-buttons-basket:hover .header__basket-link:not(.header__basket-link-full) img {
+.header__user-buttons-find:hover .header__find-item,
+.header__user-buttons-enter:hover .header__enter-item,
+.header__user-buttons-basket:hover .header__basket-item {
   filter: invert(1);
 }
 
-.header__basket-link-full:hover img {
-  filter: none;
+.header__user-buttons-find:hover .header__find-item,
+.header__user-buttons-enter:hover .header__enter-item,
+.header__user-buttons-basket:hover .header__basket-item {
+  filter: invert(1);
+}
+
+.header__user-buttons-find:hover .header__find-item,
+.header__user-buttons-enter:hover .header__enter-item,
+.header__user-buttons-basket:hover .header__basket-item {
+  filter: invert(1);
 }
 
 .header__user-buttons-enter:hover .header__enter-link,
 .header--basket-link:hover,
 .header__user-buttons-basket:hover .header__basket-link {
+  color: #323232;
+
+  background-color: #f8f7f4;
+}
+
+.header__user-buttons-basket--full .header__basket-link {
   color: #323232;
 
   background-color: #f8f7f4;
@@ -337,16 +360,19 @@ a.header__menu-inner-link--active {
 }
 
 .enter-field__button {
-  padding: 15px 25px;
+  padding: 14px 25px;
+  max-height: 50px;
 }
 
-.header__user-buttons-enter:hover .header__enter-field, .header__user-buttons-basket:hover .basket-table {
+.header__user-buttons-enter:hover .header__enter-field,
+.header__user-buttons-basket:hover .basket-table {
   display: inline-block;
 
   vertical-align: middle;
 }
 
-.header__enter-field, .basket-table {
+.header__enter-field,
+.basket-table {
   display: none;
 
   border: 1px solid transparent;
@@ -478,6 +504,16 @@ a.header__menu-inner-link--active {
   display: block;
 }
 
+.enter-field__password-reminder:hover,
+.enter-field__new-user:hover {
+  color: #ffbc9e;
+}
+
+.enter-field__password-reminder:active,
+.enter-field__new-user:active {
+  color: #ffbc9e;
+}
+
 .enter-field__new-user {
   flex-grow: 1;
 
@@ -500,7 +536,7 @@ a.header__menu-inner-link--active {
 .header__user-buttons-enter {
   position: relative;
 
-  padding-right: 9px;
+  padding-right: 8px;
 }
 
 .header__user-buttons--style {
@@ -567,10 +603,11 @@ a.header__menu-inner-link--active {
 }
 
 .contacts__worktime {
-  margin: 9px 0;
+  margin: -4px 0;
 
   font-size: 14px;
   text-align: right;
+  line-height: 16px;
 }
 
 /* Выше блок с контактами */
@@ -599,12 +636,13 @@ a.header__menu-inner-link--active {
 }
 
 .carousel__slide h2 {
-  margin-top: -281px;
-  margin-bottom: 34px;
+  margin-top: -273px;
+  margin-bottom: 42px;
 
   font-weight: 700;
   font-size: 60px;
   color: #FFFFFF;
+  line-height: 60px;
 }
 
 .carousel__slide img {
@@ -612,7 +650,7 @@ a.header__menu-inner-link--active {
 }
 
 .full-basket {
-  padding: 17px 41px;
+  padding: 13px 41px;
 
   font-size: 32px;
 }
@@ -621,11 +659,10 @@ a.header__menu-inner-link--active {
   position: relative;
 }
 
-
 .carousel__slider-buttons {
   position: absolute;
 
-  bottom: 75px;
+  bottom: 79px;
   left: 0;
 
   font-size: 0;
@@ -707,14 +744,13 @@ a.header__menu-inner-link--active {
   background-image: url(../img/carousel__3.png);
 }
 
-
 /* Малинка/шоколадка даром */
 
 .gifts {
   display: flex;
 
   justify-content: space-between;
-  margin-top: -100px;
+  margin-top: -101px;
   margin-bottom: 40px;
   padding: 0;
 }
@@ -727,10 +763,14 @@ a.header__menu-inner-link--active {
 }
 
 .gifts-item img {
-  border-radius: 20px;
+  border-radius: 15px;
 }
 
 .gifts-item__content {
+  position: absolute;
+  left: -2px;
+  top: -3px;
+
   margin: 20px;
 
   font-weight: 700;
@@ -743,13 +783,19 @@ a.header__menu-inner-link--active {
   font-size: 35px;
 }
 
+.gifts-item__text {
+  margin-top: 15px;
+
+  line-height: 22px;
+}
+
 .gifts-item__link {
   position: absolute;
-  display: flex;
+  right: 22px;
+  bottom: 28px;
 
-  right: 21px;
-  bottom: 25px;
-  padding: 14px 21px;
+  display: flex;
+  padding: 13px 22px;
 
   font-size: 18px;
   font-weight: 700;
@@ -760,7 +806,7 @@ a.header__menu-inner-link--active {
 /* Выше блок с акционными товарами */
 
 .catalog-form {
-  margin: 25px 0px;
+  margin: 22px 0px 28px 0px;
 
   color: white;
 }
@@ -769,14 +815,14 @@ a.header__menu-inner-link--active {
   display: flex;
 
   align-items: center;
-  padding-bottom: 5px;
+  padding-bottom: 6px;
 }
 
 .form-group-style {
   display: flex;
 
   justify-content: space-between;
-  padding: 9px 18px;
+  padding: 8px 12px;
   margin: 8px 0;
 
   color: white;
@@ -786,7 +832,7 @@ a.header__menu-inner-link--active {
 }
 
 .form-group-style--padding {
-  padding: 9px 14px;
+  padding: 8px 12px;
 }
 
 .form-group-style label {
@@ -873,7 +919,7 @@ a.header__menu-inner-link--active {
 }
 
 /* Скрывает стрелку в IE 10 и 11 */
-sort_type::-ms-expand {
+.sort_type::-ms-expand {
     display: none;
 }
 
@@ -944,7 +990,7 @@ sort_type::-ms-expand {
 }
 
 .form-group__range-controls .form-group__range-bar {
-  width: 50%;
+  width: 60%;
   height: 4px;
   margin-left: 15%;
 
@@ -967,11 +1013,11 @@ sort_type::-ms-expand {
 }
 
 .form-group__range-controls .range__toggle-min {
-  left: 12px;
+  left: 18px;
 }
 
 .form-group__range-controls .range__toggle-max {
-  left: 110px;
+  left: 116px;
 }
 
 /* Выше стили для input[type="range"] на странице каталога */
@@ -1017,6 +1063,7 @@ sort_type::-ms-expand {
 
 .catalog__item-popular {
   position: absolute;
+  left: 2px;
 
   width: 61px;
   height: 61px;
@@ -1027,10 +1074,11 @@ sort_type::-ms-expand {
 }
 
 .catalog__item {
-  display: inline-block;
+  position: relative;
 
+  display: inline-block;
   vertical-align: middle;
-  margin-top: -43px;
+  margin-top: -44px;
   width: 272px;
   height: 405px;
 
@@ -1039,7 +1087,7 @@ sort_type::-ms-expand {
 }
 
 .catalog-item-cost {
-  margin-top: -68px;
+  margin-top: -65px;
 
   text-align: left;
 }
@@ -1055,42 +1103,37 @@ sort_type::-ms-expand {
 }
 
 .catalog-item__weight {
+  margin-left: -3px;
+
   font-weight: 700;
   font-size: 30px;
 }
 
 .catalog-item__title {
-  margin-top: 28px;
+  margin-top: 20px;
   padding: 3px 8px;
 
   font-weight: 500;
   font-size: 16px;
   text-align: center;
+  line-height: 22px;
 }
 
 .catalog {
   display: flex;
 
   flex-wrap: wrap;
+  margin: 2px -5px 5px -1px;
+  /* margin: 0px -5px 12px -2px; */
   padding: 40px 0 0 0;
   justify-content: space-between;
-}
-
-.gifts-item {
-  position: relative;
-}
-
-.gifts-item__content {
-  position: absolute;
-  left: 0;
-  top: 0;
 }
 
 .breadcrumbs {
   display: block;
 
   padding: 0;
-  margin: 13px 0 0 0;
+  margin: 8px 0 0px 0px;
 
   font-size: 14px;
   font-weight: 400;
@@ -1103,6 +1146,7 @@ sort_type::-ms-expand {
 
 .breadcrumbs__item:not(:last-child)::after {
  content: " » ";
+ margin: 0 3px 0 4px;
 }
 
 .main {
@@ -1120,9 +1164,8 @@ sort_type::-ms-expand {
 .benefits {
   display: block;
 
-  padding: 4px 20px;
-  margin: 0;
-  margin-top: -60px;
+  padding: 4px 20px 10px;
+  margin: -49px 0 0 0;
 
   color: #323232;
 
@@ -1133,9 +1176,12 @@ sort_type::-ms-expand {
 
 .benefits__header {
   margin-bottom: 0;
+  margin-top: 21px;
 
   font-weight: 500;
   font-size: 24px;
+  line-height: 30px;
+  letter-spacing: 0.1px;
 }
 
 .benefits__list {
@@ -1143,15 +1189,16 @@ sort_type::-ms-expand {
   flex-wrap: wrap;
 
   padding: 0;
-  margin-bottom: 7px;
+  margin-bottom: 5px;
+  margin-top: 8px;
 }
 
 .benefits__list-item {
   display: inline-block;
-
   width: 49%;
+  margin-bottom: 9px;
+
   vertical-align: middle;
-  margin-bottom: 14px;
 }
 
 .benefits__list-item:nth-child(1) .benefits__list-item-icon {
@@ -1186,8 +1233,7 @@ sort_type::-ms-expand {
 
 .benefits__list-item-text {
   display: table-cell;
-
-  padding: 7px 4px 0 9px;
+  padding: 13px 4px 0 8px;
 
   font-size: 16px;
   font-weight: 400;
@@ -1204,20 +1250,21 @@ sort_type::-ms-expand {
   position: relative;
   display: inline-block;
 
-  vertical-align: middle;
+  vertical-align: top;
   width: 560px;
-  height: 220px;
+  min-height: 220px;
+  overflow: hidden;
 
   background-image: url(../img/articles__background.jpeg);
   background-position: 18% 39%;
   background-origin: border-box;
-  border-radius: 20px;
+  border-radius: 15px;
 }
 
 .article__content {
   position: absolute;
 
-  margin: 30px 19px;
+  margin: 26px 19px;
 
   color: #323232;
 }
@@ -1238,6 +1285,7 @@ sort_type::-ms-expand {
 .article__title {
   display: block;
 
+  margin-top: 6px;
   width: 309px;
 
   font-size: 24px;
@@ -1255,19 +1303,32 @@ sort_type::-ms-expand {
 
   display: inline-block;
 
-  vertical-align: middle;
-  width: 549px;
-  height: 211px;
+  vertical-align: top;
+  width: 560px;
+  height: auto;
 
   background-color: #F8F7F4;
-  border: 4px solid transparent;
-  border-image-source: url("../img/subscribes__background.png");
-  border-image-slice: 10;
-  border-image-repeat: repeat;
+  border-radius: 15px;
+  background-image: url("../img/subscribes__background.png");
+}
+
+.subscribes__wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  margin: 5px;
+  height: 211px;
+  width: 549px;
+
+  border-radius: 15px;
+  background-color: white;
 }
 
 .subscribes__text {
-  margin: 33px 20px;
+  height: 61px;
+  margin: 30px 21px;
+  overflow: hidden;
 
   font-size: 16px;
   font-weight: 400;
@@ -1278,7 +1339,7 @@ sort_type::-ms-expand {
 .subscribes__form {
   display: block;
 
-  margin: 18px;
+  margin: 40px 3px 16px 21px;
 }
 
 input[type="email"].subscribes__input {
@@ -1287,7 +1348,8 @@ input[type="email"].subscribes__input {
 }
 
 .subscribes__button {
-  padding: 14px 19px;
+  padding: 11px 18px 14px 18px;
+  margin-left: 11px;
 }
 
 /* Блок с контактами на карте ниже */
@@ -1330,6 +1392,8 @@ input[type="email"].subscribes__input {
 }
 
 .address__text--bold {
+  margin-top: 1px;
+
   font-size: 18px;
   font-weight: 700;
   line-height: 26px;
@@ -1351,8 +1415,8 @@ input[type="email"].subscribes__input {
 .address .address__button {
   display: block;
 
-  margin-top: 23px;
-  padding: 14px 25px;
+  margin-top: 25px;
+  padding: 13px 26px;
 
   line-height: 18px;
   color: #fefefe;
@@ -1370,9 +1434,15 @@ input[type="email"].subscribes__input {
   padding: 17px 0;
 }
 
+.footer__catalog--style {
+  border-top: 1px solid rgba(255, 255, 255, 0.3);
+}
+
 .social-links {
   margin: 20px 0;
-  padding-left: 0;
+  padding-left: 1px;
+  max-width: 20%;
+  white-space: normal;
 }
 
 .social-links__item img {
@@ -1394,15 +1464,15 @@ input[type="email"].subscribes__input {
 
 .social-links__item {
   display: inline;
-  padding-right: 10px;
+  padding-right: 9px;
 }
 
 .footer__about {
   display: inline-block;
 
   vertical-align: middle;
-  padding-left: 0;
-  margin: 20px 17px;
+  padding-left: 0px;
+  margin: 17px 15px;
 
   font-size: 13px;
   font-weight: 400;
@@ -1416,30 +1486,34 @@ input[type="email"].subscribes__input {
 
 .footer__developer__logo {
   display: block;
+  margin: 2px 0px 0px 1px;
 
   text-decoration: none;
 }
 
 .footer__about-item {
   position: relative;
-}
 
-.footer__about-item--icon {
-  display: inline-block;
-
-  vertical-align: middle;
-  position: absolute;
-  left: -22px;
-
-  width: 15px;
-  height: 13px;
-
-  background-image: url(../img/heart.svg);
-  background-repeat: no-repeat;
+  margin-bottom: 5px;
 }
 
 .footer__about-link--bold {
   font-weight: 700;
+}
+
+.footer__about-link--bold::after {
+  content: "";
+  display: inline-block;
+
+  vertical-align: bottom;
+  position: absolute;
+  bottom: 1px;
+  left: -22px;
+  width: 15px;
+  height: 13px;
+
+  background: url(../img/heart.svg);
+  background-repeat: no-repeat;
 }
 
 .footer__about-link {
@@ -1450,7 +1524,7 @@ input[type="email"].subscribes__input {
 
 .pagination {
   text-align: right;
-  margin: -10px 0 30px 0;
+  margin: -3px -12px 30px 6px;
 }
 
 .pagination__link--active,
@@ -1476,6 +1550,33 @@ input[type="email"].subscribes__input {
   display: inline-block;
 
   vertical-align: middle;
+}
+
+.pagination__item:first-child {
+  background-image: url(../img/pagination__left.svg);
+  transform: rotate(180deg);
+}
+
+.pagination__item:last-child {
+  background-image: url(../img/pagination__right.svg);
+}
+
+.pagination__item:first-child,
+.pagination__item:last-child {
+  background-repeat: no-repeat;
+  background-position: 52% 48%;
+}
+
+.pagination__item:first-child:active .pagination__link {
+  background-position: 52% 48%;
+  background-image: url(../img/pagination-black.svg);
+  background-repeat: no-repeat;
+}
+
+.pagination__item:last-child:active .pagination__link {
+  background-image: url(../img/pagination-black.svg);
+  background-position: 52% 48%;
+  background-repeat: no-repeat;
 }
 
 .pagination__link:hover {
@@ -1614,9 +1715,13 @@ input[type="email"].subscribes__input {
 .call-back__textarea {
   display: block;
 
+  resize: none;
   min-width: 90%;
   margin-bottom: 25px;
   padding: 15px;
+
+  border-radius: 5px;
+  border: 1px solid rgba(178, 178, 178, 0.52);
 }
 
 .call-back__button {
