--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,8 @@ body {
   white-space: nowrap;
 
   border: 0;
-  clip-path: inset(100%);
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
   clip: rect(0, 0, 0, 0);
   overflow: hidden;
 }
@@ -42,7 +43,11 @@ body {
   text-align: center;
   color: #fefefe;
 
-  box-shadow: 0 1px 2px 0 #ac1000;
+  -webkit-box-shadow: 0 1px 2px 0 #ac1000;
+
+          box-shadow: 0 1px 2px 0 #ac1000;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#e74a35), to(#f26843));
+  background-image: -o-linear-gradient(bottom, #e74a35, #f26843);
   background-image: linear-gradient(to top, #e74a35, #f26843);
   border-radius: 50px;
   border: 0;
@@ -52,7 +57,13 @@ body {
   text-decoration: none;
   color: #fefefe;
 
-  box-shadow: 0 2px 2px 0 #ac1000;
+  -webkit-box-shadow: 0 2px 2px 0 #ac1000;
+
+          box-shadow: 0 2px 2px 0 #ac1000;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.2)), to(rgba(255, 255, 255, 0.2))),
+                    -webkit-gradient(linear, left bottom, left top, from(#e74a35), to(#f26843));
+  background-image: -o-linear-gradient(top, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)),
+                    -o-linear-gradient(bottom, #e74a35, #f26843);
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)),
                     linear-gradient(to top, #e74a35, #f26843);
 }
@@ -60,7 +71,13 @@ body {
 .button:active {
   text-decoration: none;
 
-  box-shadow: inset 0 2px 2px 0 #942718;
+  -webkit-box-shadow: inset 0 2px 2px 0 #942718;
+
+          box-shadow: inset 0 2px 2px 0 #942718;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.07)), to(rgba(0, 0, 0, 0.07))),
+                    -webkit-gradient(linear, left top, left bottom, from(#e74a35), to(#f26843));
+  background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0.07), rgba(0, 0, 0, 0.07)),
+                    -o-linear-gradient(top, #e74a35, #f26843);
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.07), rgba(0, 0, 0, 0.07)),
                     linear-gradient(to bottom, #e74a35, #f26843);
 }
@@ -97,6 +114,46 @@ body {
   border: 1px solid rgba(178, 178, 178, 0.52);
 }
 
+.input::-webkit-input-placeholder,
+.textarea::-webkit-input-placeholder {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: normal;
+  text-align: left;
+  color: #999999;
+}
+
+.input::-moz-placeholder,
+.textarea::-moz-placeholder {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: normal;
+  text-align: left;
+  color: #999999;
+}
+
+.input:-ms-input-placeholder,
+.textarea:-ms-input-placeholder {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: normal;
+  text-align: left;
+  color: #999999;
+}
+
+.input::-ms-input-placeholder,
+.textarea::-ms-input-placeholder {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: normal;
+  text-align: left;
+  color: #999999;
+}
+
 .input::placeholder,
 .textarea::placeholder {
   font-size: 16px;
@@ -109,12 +166,14 @@ body {
 
 .input:hover,
 .textarea:hover {
-  box-shadow: 0 0 0 1px rgba(154, 154, 154, 0.52);
+  -webkit-box-shadow: 0 0 0 1px rgba(154, 154, 154, 0.52);
+          box-shadow: 0 0 0 1px rgba(154, 154, 154, 0.52);
 }
 
 .input:focus,
 .textarea:focus {
-  box-shadow: 0 0 0 1px rgba(46, 136, 228, 0.52);
+  -webkit-box-shadow: 0 0 0 1px rgba(46, 136, 228, 0.52);
+          box-shadow: 0 0 0 1px rgba(46, 136, 228, 0.52);
   outline: none;
   border: 1px solid rgba(46, 136, 228, 0.52);
 }
@@ -122,12 +181,14 @@ body {
 a {
   color: #FFFFFF;
   text-decoration: underline;
-  text-decoration-color: rgba(255,255,255,.2);
+  -webkit-text-decoration-color: rgba(255,255,255,.2);
+          text-decoration-color: rgba(255,255,255,.2);
 }
 
 a:hover {
   color: #ffbc9e;
-  text-decoration: underline #ffbc9e;
+  -webkit-text-decoration: underline #ffbc9e;
+          text-decoration: underline #ffbc9e;
 }
 
 /* Ниже стили для шапки */
@@ -140,8 +201,12 @@ a:hover {
 }
 
 .header-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .header__logo-item {
@@ -149,7 +214,9 @@ a:hover {
 }
 
 .header__menu {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   padding-left: 10px;
   margin: 24px 0;
 
@@ -220,7 +287,8 @@ a:hover {
   line-height: 160%;
 
   border-radius: 5px;
-  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
+          box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
   background-color: #f8f7f4;
 }
 
@@ -263,7 +331,9 @@ a.header__menu-inner-link--active {
   text-decoration: none;
   color: #323232;
 
-  box-shadow: inset 0 2px 1px 0 #696969;
+  -webkit-box-shadow: inset 0 2px 1px 0 #696969;
+
+          box-shadow: inset 0 2px 1px 0 #696969;
   background-color: #ededed;
 }
 
@@ -371,7 +441,8 @@ a.header__menu-inner-link--active {
 
   border: 1px solid transparent;
   border-radius: 5px;
-  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
+          box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
   background-color: #f8f7f4;
 }
 
@@ -398,7 +469,8 @@ a.header__menu-inner-link--active {
 
   border: 1px solid transparent;
   border-radius: 5px;
-  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
+          box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
   background-color: #f8f7f4;
 }
 
@@ -492,8 +564,13 @@ a.header__menu-inner-link--active {
 }
 
 .header__enter-field form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 277px;
   padding: 20px;
 }
@@ -517,8 +594,12 @@ a.header__menu-inner-link--active {
 }
 
 .enter-field__submit {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .enter-field__forgot-password a {
@@ -536,7 +617,9 @@ a.header__menu-inner-link--active {
 }
 
 .enter-field__new-user {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 
   font-size: 13px;
   font-weight: 400;
@@ -644,6 +727,7 @@ a.header__menu-inner-link--active {
   text-align: center;
 
   background-repeat: no-repeat;
+  background-image: -o-radial-gradient(circle closest-side, rgba(255,255,255,.5), transparent);
   background-image: radial-gradient(circle closest-side, rgba(255,255,255,.5), transparent);
 }
 
@@ -653,6 +737,10 @@ a.header__menu-inner-link--active {
   height: 584px;
   margin-top: 50px;
   text-align: center;
+
+  -webkit-transition: background-image 1s;
+
+  -o-transition: background-image 1s;
 
   transition: background-image 1s;
   background-image: url(../img/carousel__1.png);
@@ -722,7 +810,22 @@ a.header__menu-inner-link--active {
   left: 0;
   z-index: -1;
 
+  -webkit-transition: background-color 1s;
+
+  -o-transition: background-color 1s;
+
   transition: background-color 1s;
+}
+
+@-webkit-keyframes carousel-slide-show {
+  from {
+    visibility: hidden;
+    opacity: 0;
+  }
+  to {
+    visibility: visible;
+    opacity: 1;
+  }
 }
 
 @keyframes carousel-slide-show {
@@ -750,21 +853,24 @@ a.header__menu-inner-link--active {
 
 .product-1:checked + .carousel__slide {
   display: block;
-  animation: carousel-slide-show 1s ease-in;
+  -webkit-animation: carousel-slide-show 1s ease-in;
+          animation: carousel-slide-show 1s ease-in;
 
   background-image: url(../img/carousel__1.png);
 }
 
 .product-2:checked + .carousel__slide {
   display: block;
-  animation: carousel-slide-show 1s ease-in;
+  -webkit-animation: carousel-slide-show 1s ease-in;
+          animation: carousel-slide-show 1s ease-in;
 
   background-image: url(../img/carousel__2.png);
 }
 
 .product-3:checked + .carousel__slide {
   display: block;
-  animation: carousel-slide-show 1s ease-in;
+  -webkit-animation: carousel-slide-show 1s ease-in;
+          animation: carousel-slide-show 1s ease-in;
 
   background-image: url(../img/carousel__3.png);
 }
@@ -772,9 +878,15 @@ a.header__menu-inner-link--active {
 /* Малинка/шоколадка даром */
 
 .gifts {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+
+      -ms-flex-pack: justify;
+
+          justify-content: space-between;
   margin-top: -101px;
   margin-bottom: 40px;
   padding: 0;
@@ -819,6 +931,10 @@ a.header__menu-inner-link--active {
   right: 22px;
   bottom: 28px;
 
+  display: -webkit-box;
+
+  display: -ms-flexbox;
+
   display: flex;
   padding: 13px 22px;
 
@@ -837,16 +953,28 @@ a.header__menu-inner-link--active {
 }
 
 .form-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 
-  align-items: center;
+  -webkit-box-align: center;
+
+      -ms-flex-align: center;
+
+          align-items: center;
   padding-bottom: 6px;
 }
 
 .form-group-style {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+
+      -ms-flex-pack: justify;
+
+          justify-content: space-between;
   padding: 8px 12px;
   margin: 8px 0;
 
@@ -940,7 +1068,8 @@ a.header__menu-inner-link--active {
   }
 
 .sort_type:hover {
-  filter: invert(1);
+  -webkit-filter: invert(1);
+          filter: invert(1);
 }
 
 /* Скрывает стрелку в IE 10 и 11 */
@@ -973,7 +1102,8 @@ a.header__menu-inner-link--active {
   padding: 9px 29px;
 
   color: #323232;
-  box-shadow: inset 0 2px 1px 0 #696969;
+  -webkit-box-shadow: inset 0 2px 1px 0 #696969;
+          box-shadow: inset 0 2px 1px 0 #696969;
   background-color: #ededed;
   border: 0;
 }
@@ -1067,7 +1197,8 @@ a.header__menu-inner-link--active {
   z-index: 2;
 
   background-color:rgba(248, 247, 244, .2);
-  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
+          box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
   border-radius: 5px;
 }
 
@@ -1145,13 +1276,19 @@ a.header__menu-inner-link--active {
 }
 
 .catalog {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+
+      flex-wrap: wrap;
   margin: 2px -5px 5px -1px;
   /* margin: 0px -5px 12px -2px; */
   padding: 40px 0 0 0;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .breadcrumbs {
@@ -1210,8 +1347,11 @@ a.header__menu-inner-link--active {
 }
 
 .benefits__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 
   padding: 0;
   margin-bottom: 5px;
@@ -1266,8 +1406,12 @@ a.header__menu-inner-link--active {
 }
 
 .articles__stock {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding-top: 38px;
 }
 
@@ -1454,8 +1598,12 @@ input[type="email"].subscribes__input {
 /* Блок с контактами на карте выше */
 
 .footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding: 17px 0;
 }
 
@@ -1579,7 +1727,9 @@ input[type="email"].subscribes__input {
 
 .pagination__item:first-child {
   background-image: url(../img/pagination__left.svg);
-  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
 }
 
 .pagination__item:last-child {
@@ -1644,21 +1794,39 @@ input[type="email"].subscribes__input {
   display: block;
 }
 
-@keyframes slide-down {
+@-webkit-keyframes slide-down {
   from {
     opacity: 0;
     visibility: hidden;
-    transform: translateY(20px);
+    -webkit-transform: translateY(20px);
+            transform: translateY(20px);
   }
   to {
     opacity: 1;
     visibility: visible;
-    transform: translateY(0);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes slide-down {
+  from {
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transform: translateY(20px);
+            transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    visibility: visible;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
   }
 }
 
 .call-back--wrapper.active .call-back {
-  animation: slide-down 0.5s;
+  -webkit-animation: slide-down 0.5s;
+          animation: slide-down 0.5s;
   opacity: 1;
   visibility: visible;
 }
@@ -1679,48 +1847,83 @@ input[type="email"].subscribes__input {
   border-radius: 10px;
 }
 
-@keyframes shudder {
+@-webkit-keyframes shudder {
   from {
-    transform: rotateZ(0);
+    -webkit-transform: rotateZ(0);
+            transform: rotateZ(0);
   }
   25% {
-    transform: rotateZ(-1deg);
+    -webkit-transform: rotateZ(-1deg);
+            transform: rotateZ(-1deg);
   }
   50% {
-    transform: rotateZ(1deg);
+    -webkit-transform: rotateZ(1deg);
+            transform: rotateZ(1deg);
   }
   75% {
-    transform: rotateZ(-1deg);
+    -webkit-transform: rotateZ(-1deg);
+            transform: rotateZ(-1deg);
   }
   to {
-    transform: rotateZ(0deg);
+    -webkit-transform: rotateZ(0deg);
+            transform: rotateZ(0deg);
+  }
+}
+
+@keyframes shudder {
+  from {
+    -webkit-transform: rotateZ(0);
+            transform: rotateZ(0);
+  }
+  25% {
+    -webkit-transform: rotateZ(-1deg);
+            transform: rotateZ(-1deg);
+  }
+  50% {
+    -webkit-transform: rotateZ(1deg);
+            transform: rotateZ(1deg);
+  }
+  75% {
+    -webkit-transform: rotateZ(-1deg);
+            transform: rotateZ(-1deg);
+  }
+  to {
+    -webkit-transform: rotateZ(0deg);
+            transform: rotateZ(0deg);
   }
 }
 
 .call-back__window.call-back--error {
-  animation: shudder 0.4s;
+  -webkit-animation: shudder 0.4s;
+          animation: shudder 0.4s;
 }
 
 @keyframes shudder {
   from {
-    transform: rotateZ(0);
+    -webkit-transform: rotateZ(0);
+            transform: rotateZ(0);
   }
   25% {
-    transform: rotateZ(-1deg);
+    -webkit-transform: rotateZ(-1deg);
+            transform: rotateZ(-1deg);
   }
   50% {
-    transform: rotateZ(1deg);
+    -webkit-transform: rotateZ(1deg);
+            transform: rotateZ(1deg);
   }
   75% {
-    transform: rotateZ(-1deg);
+    -webkit-transform: rotateZ(-1deg);
+            transform: rotateZ(-1deg);
   }
   to {
-    transform: rotateZ(0deg);
+    -webkit-transform: rotateZ(0deg);
+            transform: rotateZ(0deg);
   }
 }
 
 .call-back__window.call-back--error {
-  animation: shudder 0.4s;
+  -webkit-animation: shudder 0.4s;
+          animation: shudder 0.4s;
 }
 
 .call-back__text {
