--- a/css/style.css
+++ b/css/style.css
@@ -46,8 +46,8 @@ body {
   -webkit-box-shadow: 0 1px 2px 0 #ac1000;
 
           box-shadow: 0 1px 2px 0 #ac1000;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#e74a35), to(#f26843));
   background-image: -o-linear-gradient(bottom, #e74a35, #f26843);
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#e74a35), to(#f26843));
   background-image: linear-gradient(to top, #e74a35, #f26843);
   border-radius: 50px;
   border: 0;
@@ -60,10 +60,10 @@ body {
   -webkit-box-shadow: 0 2px 2px 0 #ac1000;
 
           box-shadow: 0 2px 2px 0 #ac1000;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.2)), to(rgba(255, 255, 255, 0.2))),
-                    -webkit-gradient(linear, left bottom, left top, from(#e74a35), to(#f26843));
   background-image: -o-linear-gradient(top, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)),
                     -o-linear-gradient(bottom, #e74a35, #f26843);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.2)), to(rgba(255, 255, 255, 0.2))),
+                    -webkit-gradient(linear, left bottom, left top, from(#e74a35), to(#f26843));
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)),
                     linear-gradient(to top, #e74a35, #f26843);
 }
@@ -74,10 +74,10 @@ body {
   -webkit-box-shadow: inset 0 2px 2px 0 #942718;
 
           box-shadow: inset 0 2px 2px 0 #942718;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.07)), to(rgba(0, 0, 0, 0.07))),
-                    -webkit-gradient(linear, left top, left bottom, from(#e74a35), to(#f26843));
   background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0.07), rgba(0, 0, 0, 0.07)),
                     -o-linear-gradient(top, #e74a35, #f26843);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.07)), to(rgba(0, 0, 0, 0.07))),
+                    -webkit-gradient(linear, left top, left bottom, from(#e74a35), to(#f26843));
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.07), rgba(0, 0, 0, 0.07)),
                     linear-gradient(to bottom, #e74a35, #f26843);
 }
@@ -652,6 +652,7 @@ a.header__menu-inner-link--active {
 
   padding-top: 10px;
   padding-right: 10px;
+  margin: -4px;
 }
 
 .header__basket-link,
@@ -1841,7 +1842,7 @@ input[type="email"].subscribes__input {
 }
 
 .call-back__window {
-  padding: 20px 24px;
+  padding: 1px 24px 20px 24px;
 
   background-color: #f8f7f4;
   border-radius: 10px;
@@ -1924,6 +1925,18 @@ input[type="email"].subscribes__input {
 .call-back__window.call-back--error {
   -webkit-animation: shudder 0.4s;
           animation: shudder 0.4s;
+}
+
+.call-back__delete-link {
+  display: block;
+  position: absolute;
+  right: 27px;
+  top: 25px;
+  width: 18px;
+  height: 17px;
+
+  background-image: url(../img/call-back__delete-link.svg);
+  background-repeat: no-repeat;
 }
 
 .call-back__text {
